<resources>
    <string name="app_name">Calculation Carbohydrates</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="home">Home</string>

    <string name="journal">Journal</string>
    <string name="recipes">Recipes</string>

    <string name="edit" translatable="false">edit</string>
    <string name="delete" translatable="false">delete</string>
    <string name="camera" translatable="false">camera</string>
    <string name="floatingActionButton" translatable="false">Floatin gAction Button</string>


    <!--    for create product-->
    <string name="products">Product</string>
    <string name="carbohydrates">Carbohydrates per 100 grams</string>
    <string name="add_product">Add Product</string>
    <string name="update_product">Update Product</string>


    <string name="hello_register_fragment">Hello register fragment</string>
    <string name="hello_home_fragment">Hello home fragment</string>
    <string name="navigation_drawer_open">Navigation drawer open</string>
    <string name="navigation_drawer_close">Navigation drawer close</string>


    <string name="menu_register">Register</string>
    <string name="menu_products">Products</string>
    <string name="menu_recipes">Recipes</string>

    <!--    for products adapter-->
    <string name="product">Product</string>
    <string name="have">have</string>
    <string name="carbohydrate">carbohydrates per 100 grams</string>

    <string name="btn_link_to_register" translatable="false">Do not have an account? </string>
    <string name="btn_forgot_password" translatable="false">Forgot your password?</string>
    <string name="btn_login" translatable="false">LOGIN</string>
    <string name="hint_password" translatable="false">Password</string>
    <string name="hint_confirm_password" translatable="false">Confirm password</string>
    <string name="hint_email" translatable="false">Email</string>
    <string name="minimum_password" translatable="false">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed" translatable="false">Authentication failed, check your email and password or sign up</string>
    <string name="title_activity_login" translatable="false">Sign in</string>
    <string name="email" translatable="false">Email</string>
    <string name="action_register" translatable="false">Register</string>
    <string name="btn_link_to_login" translatable="false">Already have an account</string>
    <string name="lbl_forgot_password" translatable="false">Forgot password?</string>
    <string name="forgot_password_msg" translatable="false">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="btn_reset_password" translatable="false">Reset Password</string>
    <string name="btn_back" translatable="false"><![CDATA[<< Back]]></string>
    <string name="logout" translatable="false">Log out</string>
    <string name="register" translatable="false">Register</string>
    <string name="login" translatable="false">Login</string>
</resources>