<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.calccarbohydrates.ui.journal.JournalFragment"
        android:label="@string/menu_register"
        tools:layout="@layout/fragment_register" />

    <fragment
        android:id="@+id/nav_product"
        android:name="com.example.calccarbohydrates.ui.products.ListProductsFragment"
        android:label="@string/menu_products"
        tools:layout="@layout/fragment_list_products" >
        <action
            android:id="@+id/action_nav_gallery_to_nav_slideshow"
            app:destination="@id/nav_products" />
    </fragment>

    <fragment
        android:id="@+id/nav_products"
        android:name="com.example.calccarbohydrates.ui.recipes.RecipesFragment"
        android:label="@string/menu_recipes"
        tools:layout="@layout/fragment_create_product" >
        <action
            android:id="@+id/action_nav_slideshow_to_nav_gallery"
            app:destination="@id/nav_product" />
    </fragment>
</navigation>